--- a/public/css/introHCI.css
+++ b/public/css/introHCI.css
@@ -5,7 +5,7 @@
 
 /* applies to any <p> descendants of an element of class "example-class-selector" */
 .example-class-selector p {
-	/* Colors are in hexadecimal: http://www.colorpicker.com/ */	
+	/* Colors are in hexadecimal: http://www.colorpicker.com/ */
 	color: #CC00AA;
 }
 
@@ -23,7 +23,7 @@
      bottom: 0;
      right: 0;
      position: absolute;
-     z-index: -1;	
+     z-index: -1;
 }
 
 .jumbotron p {
@@ -38,7 +38,7 @@
      overflow: hidden;
 }
 
-.project .details .detailsImage {
+.detailsImage {
      width: 200px;
      margin: 10px 10px 10px 0px;
      float: left;
