--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html>
+
 <head>
 	<title>HCI Project Portfolio</title>
 	<meta charset="utf-8">
@@ -10,9 +11,9 @@
 	<link href="/css/introHCI.css" rel="stylesheet">
 	<!-- this is a comment in HTML -->
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
@@ -20,6 +21,8 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/introHCI.js"></script>
+	{{> facebook}}
+	<script src="/js/facebook.js"></script>
 </head>
 
 <body>
@@ -27,9 +30,13 @@
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div class="jumbotron">
-			<h1 id="name">Scott Klemmer</h1>
-			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
-			<p class="facebookLogin">Please login through Facebook</p>
+			<h1 id="name">Bob</h1>
+			<p>UX Designer + Musician</p>
+			<p class="facebookLogin">
+				Please login through Facebook
+				<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+				</fb:login-button>
+			</p>
 		</div>
 
 		<div id="facebookPhoto" class="profile">
@@ -42,16 +49,17 @@
 		<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
 		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
 		{{#each projects}}
-		<div class="project" id="{{id}}">
-			<div class="thumbnail">
-				<a href="#">
-					<img src="images/{{image}}" alt="Lorem Pixel image" class="img">
-					<p>{{name}}</p>
-				</a>
-				<div class="details"></div>
+			<div class="project" id="{{id}}">
+				<div class="thumbnail">
+					<a href="#">
+						<img src="images/{{image}}" alt="Lorem Pixel image" class="img">
+						<p>{{name}}</p>
+					</a>
+					<div class="details"></div>
+				</div>
 			</div>
-		</div>
 		{{/each}}
 
 </body>
+
 </html>
